infrastructure/ntfy/ntfy-gateway.yaml
---
# https://github.com/argoproj/argo-helm/blob/main/charts/argo-cd/README.md#gateway-api-httproute
# https://argo-cd.readthedocs.io/en/stable/operator-manual/ingress/#gateway-api-example
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy-httproute

spec:
  parentRefs:
    - name: primary-gateway
      namespace: envoy-gateway-system
      sectionName: https

  hostnames:
    - ntfy.sidewinder.lan

  rules:
    - backendRefs:
        - name: ntfy-svc # SVC name (internal IP:PORT).
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy-http-to-https

spec:
  parentRefs:
    - name: primary-gateway
      namespace: envoy-gateway-system
      sectionName: http

  hostnames:
    - ntfy.sidewinder.lan

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
